<resources>
    <string name="app_name">BMI計算機</string>
    <string name="tv_age">年齢</string>
    <string name="tv_sai">歳</string>
    <string name="tv_height">身長</string>
    <string name="tv_cm">cm</string>
    <string name="tv_weight">体重</string>
    <string name="tv_kg">kg</string>
    <string name="bt_execution">計算</string>
    <string name="bt_clear">クリア</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、6歳未満の場合はカウプ指数が、6歳から15歳まではローレル関数が使われます。本アプリはBMIのみに対応しています。</string>
    <string name="dialog_ok">確認</string>

    <string name="tv_output1"></string>
    <string name="tv_output2"></string>
    <string name="tv_output3"></string>
    <string name="tv_output4"></string>
</resources>