<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_age"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Age"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_height"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Height"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tv_Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_weight"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Weight"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <Button
        android:id="@+id/bt_Execution"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_execution"
        app:layout_constraintBottom_toTopOf="@+id/bt_Clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="66dp" />

    <EditText
        android:id="@+id/et_Weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_Execution"
        app:layout_constraintStart_toEndOf="@+id/tv_Weight" />

    <EditText
        android:id="@+id/et_Height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_Weight"
        app:layout_constraintStart_toEndOf="@+id/tv_Height" />

    <EditText
        android:id="@+id/et_Age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_Height"
        app:layout_constraintStart_toEndOf="@+id/tv_Age" />

    <TextView
        android:id="@+id/tvSai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_sai"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Age"
        app:layout_constraintStart_toEndOf="@+id/et_Age" />

    <TextView
        android:id="@+id/tvCm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_cm"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Height"
        app:layout_constraintStart_toEndOf="@+id/et_Height" />

    <TextView
        android:id="@+id/tvKg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_Weight"
        app:layout_constraintStart_toEndOf="@+id/et_Weight" />

    <TextView
        android:id="@+id/tv_output1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/tv_output2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output1" />

    <TextView
        android:id="@+id/tv_output3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output2" />

    <TextView
        android:id="@+id/tv_output4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="right"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="33dp" />

</androidx.constraintlayout.widget.ConstraintLayout>